--- a/tp2_restaurant-septime/index.html
+++ b/tp2_restaurant-septime/index.html
@@ -1,5 +1,47 @@
 <!DOCTYPE html>
 <html lang="fr">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+  <link rel="stylesheet" href="css/style.css" />
+</head>
+<body>
+  <div class="container">
+  <header>
+    <h3> City Guide-Paris</h3> 
+    <!-- <h1><hr> Le Bilan <hr></h1> -->
+    <h1>Le Bilan</h1>
+    <nav>
+   <ul>
+    <li><a href="#salle">Salle- </a></li>
+    <li><a href="#service">Service- </a></li>
+    <li><a href="#dressage">Dressage- </a></li>
+    <li><a href="#gout">Goût</a></li>
+   </ul>
+    </nav>
+  </header>
+  <main>
+  <section>
+  <div><img src="img/assiette.jpg" alt=""></div>
+  <div class="plat">
+    <p>Exemple de plat</p>
+    <h2>Merlu de ligne <br/>
+       CAROTTES NOUVELLES <br/>
+       EPICE DOUCES </h2>
+  </div>
+  </section>
+  <section></section>
+  <section></section>
+  <section></section>
+  <section></section>
+</main>
+  
+</body>
+</html>
+<!-- <!DOCTYPE html>
+<html lang="fr">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -11,8 +53,12 @@
     <div id="contenu">
       <header>
         <div>
-          <h2>city guide - paris</h2>
-          <h1>LE BILAN</h1>
+          <h3>city guide - paris</h3>
+          <h1>
+            <hr />
+            LE BILAN
+            <hr />
+          </h1>
           <nav>
             <ul>
               <li>Salle -</li>
@@ -24,13 +70,14 @@
         </div>
         <div>
           <div class="img1">
-            <img src="img/assiette.jpg"  alt="" />
+            <img src="img/assiette.jpg" alt="" />
           </div>
           <div>
             <h2>Exemple de plat</h2>
-            <p>MERLU DE LIGNE <br>
-               CAROTTES NOUVELLES <br>
-               EPICE DOUCES
+            <p>
+              MERLU DE LIGNE <br />
+              CAROTTES NOUVELLES <br />
+              EPICE DOUCES
             </p>
           </div>
         </div>
@@ -39,7 +86,10 @@
       <main>
         <section>
           <div>
-            <h2>LA SALLE</h2>
+            <h2>
+              LA SALLE
+              <hr />
+            </h2>
 
             <p>
               <em>
@@ -63,7 +113,10 @@
             <img src="img/resto_02.jpg" alt="" />
           </div>
           <div>
-            <h2>LE SERVICE</h2>
+            <h2>
+              LE SERVICE
+              <hr />
+            </h2>
             <p>
               <em
                 >Service toujours impeccable. L'ensemble de la table est servi
@@ -77,7 +130,10 @@
         </section>
         <section>
           <div>
-            <h2>LE DRESSAGE</h2>
+            <h2>
+              LE DRESSAGE
+              <hr />
+            </h2>
             <p>
               <em>
                 Le dressage c'est un peu la marque de fabrique du chef, avec la
@@ -96,19 +152,24 @@
             <img src="img/resto_04.jpg" alt="" />
           </div>
           <div>
-            <h2>LE GOUT</h2>
-            <p>
-              <em>
-                Last but not least, le goût. C'est le point le plus important,
-                et tellement bien ajusté ici. Les papilles voltent et
-                virevoltent au rythme des saveurs si justes, des cuissons si
-                parfaitement maîtrisées. Chaque plat, chaque association, rien
-                n'est laissé au hasard, de l'élément principal à la toute petite
-                feuille d'herbe délicatement posée sur le dessus du plat.
-                Emerveillement des sens et frénésie de créativité sont au
-                rendez-vous.</em
-              >
-            </p>
+            <div >
+              <h2>
+                LE GOUT
+                <hr />
+              </h2>
+              <p>
+                <em>
+                  Last but not least, le goût. C'est le point le plus important,
+                  et tellement bien ajusté ici. Les papilles voltent et
+                  virevoltent au rythme des saveurs si justes, des cuissons si
+                  parfaitement maîtrisées. Chaque plat, chaque association, rien
+                  n'est laissé au hasard, de l'élément principal à la toute
+                  petite feuille d'herbe délicatement posée sur le dessus du
+                  plat. Emerveillement des sens et frénésie de créativité sont
+                  au rendez-vous.</em
+                >
+              </p>
+            </div>
           </div>
         </section>
       </main>
@@ -118,4 +179,4 @@
       </footer>
     </div>
   </body>
-</html>
+</html> -->
