--- a/TP3_ce-soir/index.html
+++ b/TP3_ce-soir/index.html
@@ -1,20 +1,9 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="fr">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!--Pour la compatibilité avec Miscrosoft edge-->
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <!--Appel font awsome-->
-    <script
-      src="https://kit.fontawesome.com/5194382582.js"
-      crossorigin="anonymous"
-    ></script>
-    <!--l'appel pour la police font google caveat Brush-->
-    <link rel="preconnect" href="https://fonts.gstatic.com" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Caveat+Brush&display=swap"
-      rel="stylesheet"
+ :"
     />
     <link rel="stylesheet" href="css/style.css" />
     <title>Restaurant Ce soir</title>
@@ -63,4 +52,73 @@
     <footer></footer>
 
   </body>
+</html> --> 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+  <link rel="stylesheet" href="css/style.css">
+  
+</head>
+<body>
+  <div class="container"></div>
+  <header>
+    <div class="navigation">
+      <h1>c<span>e</span>soir</h1>
+    <nav>
+    <ul>
+    <li><a href="#ourStory">our story</a></li>
+    <li><a href="#fare">fare</a></li>
+    <li><a href="#drink">drink</a></li>
+    <li><a href="#contact">contact</a></li>
+    </ul>
+    </nav>
+    </div>
+    <div class="relative">
+    <div class="cerf">
+    <img src="consignes/img/cerf.svg" alt="" width="200">
+    </div>
+    <div class="triangle"></div>
+    <div class="flex">
+    <div><i class="arrow down"></i> 
+      <!-- arrow down pour la fleche du bas -->
+
+    </div>
+  
+  </header>
+  <main><section>
+    <div>
+      <h2>OUR STORY</h2>
+      <hr>
+      <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Hic saepe non facilis nostrum inventore pariatur tempora doloribus impedit, eligendi laboriosam labore repellat totam modi illum quos accusantium adipisci magni! Minima?</p>
+      <p>EST.20004</p>
+    </div>
+    <div><img src="consignes/img/asperge.jpg" alt=""></div>
+  </section>
+  <section>
+    <div>
+      <h2></h2>
+      <p></p>
+    </div>
+    <div></div>
+  </section>
+  <section>
+    <div>
+      <h2></h2>
+      <p></p>
+    </div>
+    <div></div>
+  </section>
+  <section>
+    <div>
+      <h2></h2>
+      <p></p>
+    </div>
+    <div></div>
+  </section></main>
+  <footer></footer>
+</body>
 </html>
